--- a/src/styles.css
+++ b/src/styles.css
@@ -36,4 +36,6 @@ div[id^="gpt-response"] {
   color: #ffffff;
   font-size: 1rem;
   line-height: 1.375rem;
+  color: rgb(229, 222, 225);
+  border: rgb(43, 45, 49);
 }
